--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -12,19 +12,15 @@
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
-         <!-- Meta data-->
-       <!-- Load closure template scripts -->
-     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
-         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
+      <!-- Load closure template scripts --> 
+ <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/soyutils.js"></script>
+         <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
-		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
-		     <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
-         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
-           
-         <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
-         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
-               <!-- Write closure template -->
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+		 <link href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css" rel="stylesheet">
+         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
+
+            <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
@@ -297,7 +293,7 @@
       <details id="subtab1">
         <summary><br class="visible-lg"><br class="visible-lg"><br class="visible-lg">Employment income</summary>
 <h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
+ <ol class="lst-stps ld-zr stps-strpd">
 
   <li>             
 <h3 id="step1">Determine if the First Nations employment income is exempt from tax</h3>
@@ -365,7 +361,7 @@
   <li>
 <h3 id="step3">Use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
 <p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
-<ol class="lst-stps-sub">
+<ol class="lst-stps-sub ld-zr stps-strpd">
 
 <li><h4 id="step3a">Determine if guideline 2 applies</h4>
 <details><summary>Your First Nations employee lives on a reserve and you (as the employer) are a resident on a reserve</summary>
@@ -654,7 +650,7 @@
         <summary><br class="visible-lg"><br class="visible-lg"><br class="visible-lg">Employment-related income</summary>
 
 <h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
+ <ol class="lst-stps ld-zr stps-strpd">
 
 <li><h3 id="tab2-step1">Determine if the employment-related income is exempt from tax</h3>
 <div id="ajax-reg-tab2">
@@ -773,7 +769,7 @@
  <details id="subtab3">
         <summary><br class="visible-lg">Self-employed fishing, barber or hairdresser, driver income</summary>
 <h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
+  <ol class="lst-stps ld-zr stps-strpd">
 
 <li><h3 id="tab3-step1">Determine if the self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab3">
@@ -908,7 +904,7 @@ You need to review specific considerations when you apply the connecting factors
         <summary>Self-employed farming and other self-employed income</summary>
 
 <h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
+<ol class="lst-stps ld-zr stps-strpd">
 
 <li><h3 id="tab4-step1">Determine if the self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab4">
