--- a/payroll/calculate/benefit/gifts.html
+++ b/payroll/calculate/benefit/gifts.html
@@ -482,7 +482,7 @@
 <h4 id="manu3">Gifts and awards provided by a person other than the employer (for example, gift bag provided at a trade show)</h4>
 <p>If the gifts and awards are provided by a person other than the employer the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 
-<ul class="list-unstyled cnjnctn-type-or ">
+<ul class="list-unstyled cnjnctn-type-and">
   <li class="cnjnctn-col">Recipients attend a trade show, convention, awards show, or similar event specific to their trade </li>
 <li class="cnjnctn-col">They receive gifts, gift bags or other promotional items at the event </li>
 <li class="cnjnctn-col">The person giving them the gift is not their employer </li>
