--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -278,7 +278,7 @@
                               </ul>
                               <details>
                                  <summary>Summary for each factors</summary>
-                                 <ul>
+                                 <ul class="colcount-sm-2">
                                     <li>Worker <strong>does not</strong> have the freedom to determine how work should be done</li>
                                     <li>Worker is monitored or supervised by the payer</li>
                                     <li>Payer sets the worker's hours and schedule</li>
@@ -308,7 +308,7 @@
                               </ul>
                               <details>
                                  <summary>Summary for each factors</summary>
-                                 <ul>
+                                 <ul class="colcount-sm-2">
                                     <li>Worker does not have the freedom to determine how work should be done</li>
                                     <li>Worker is monitored or supervised by the payer</li>
                                     <li>Payer sets the worker's hours and schedule</li>
