--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -210,11 +210,11 @@
         <p>On the other hand, if data collection is carried out to directly support the SR&amp;ED work, then it would be eligible as support work. This is because it is carried out specifically for the purpose of performing SR&amp;ED.</p>
       </details>             
 <h3>Other activities you cannot claim</h3>  
-<p>Other activities related to acquiring knowledge do not meet the SR&amp;ED requirement of attempting to achievie a scientific or technological advancement and are <strong>not eligible</strong>:</p>
+<p>The following activities carried out to obtain available knowledge or know-how do not meet the requirement of attempting to achievie a scientific or technological advancement and are <strong>not eligible</strong>:</p>
  <ul class="fa-ul">
 	<li><span class="fas fa-times text-danger fa-li fa-md"></span>Training</li>
 	<li><span class="fas fa-times text-danger fa-li fa-md"></span>On-the-job learning</li>
-	<li><span class="fas fa-times text-danger fa-li fa-md"></span>Hiring expert employees or consultants with know-how</li>
+	<li><span class="fas fa-times text-danger fa-li fa-md"></span>Hiring experts (employees or consultants) to apply what they already know</li>
 	<li><span class="fas fa-times text-danger fa-li fa-md"></span>Purchasing proprietary knowledge</li>
 </ul>
       <!--<p class="mrgn-tp-md">To review the legal definition of SR&amp;ED, refer to how <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/policies-procedures-guidelines/guidelines-eligibility-work-sred-tax-incentives.html#id_1">SR&amp;ED is defined in the Income Tax Act</a>.</p>-->
