--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -210,7 +210,7 @@
         <p>On the other hand, if data collection is carried out to directly support the SR&amp;ED work, then it would be eligible as support work. This is because it is carried out specifically for the purpose of performing SR&amp;ED.</p>
       </details>             
 <h3>Other activities you cannot claim</h3>  
-<p>The following activities carried out to obtain available knowledge or know-how do not meet the requirement of attempting to achievie a scientific or technological advancement and are <strong>not eligible</strong>:</p>
+<p>The following activities, carried out to obtain available knowledge or know-how, do not meet the requirement of attempting to achievie a scientific or technological advancement and are <strong>not eligible</strong>:</p>
  <ul class="fa-ul">
 	<li><span class="fas fa-times text-danger fa-li fa-md"></span>Training</li>
 	<li><span class="fas fa-times text-danger fa-li fa-md"></span>On-the-job learning</li>
