--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -72,8 +72,7 @@
 </ul>
 <div class="clearfix"></div>
 <div id="court">
-<p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p>
-<p>The CRA does not guarantee that the list to the of court cases are 100% complete.</p>		
+<p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes. The CRA does not guarantee that the list to the of court cases are 100% complete.</p>		
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
                   <div class="col-md-3">
