--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -161,53 +161,53 @@
  		 <label for="workshould">Control - Duties, freedom on how work should be done <small>(factor 2)</small></label>
                            <select id="workshould" name="workshould" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="workshould-1">Worker has freedom to determine how work should be done</option>
-                              <option value="workshould-2">Worker does not have freedom to determine how work should be done</option>
+                              <option value="workshould-1">Has freedom </option>
+                              <option value="workshould-2">Does not have freedom </option>
                            </select>   
 
-			  <label for="turndown">Control - Duties, accept or refuse work <small>(factor 2)</small></label>
+			  <label for="turndown">Control - Duties, accept or refuse work from the payer <small>(factor 2)</small></label>
                            <select id="turndown" name="turndown" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="turndown-1">Worker can accept or refuse work from the payer</option>
-                              <option value="turndown-2">Worker does not have the right to refuse work from the payer</option>
+                              <option value="turndown-1">Can accept or refuse work</option>
+                              <option value="turndown-2">Does not have the right to refuse work</option>
                            </select>
 	
- 		      <label for="schedule">Control - Work hours and schedule <small>(factor 2)</small></label>
+ 		      <label for="schedule">Control - Who set's work hours and schedule <small>(factor 2)</small></label>
                            <select id="schedule" name="schedule" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="schedule-1">Worker sets their own hours and schedule</option>
-                              <option value="schedule-2">Payer sets the worker's hours and schedule</option>
+                              <option value="schedule-1">Worker </option>
+                              <option value="schedule-2">Payer </option>
                            </select>
 
 
                            <label for="supervision">Control - Degree of autonomy <small>(factor 2)</small></label>
                            <select id="supervision" name="supervision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="supervision-1">Worker is monitored or supervised by the payer</option>
-                              <option value="supervision-2">Worker is not monitored or supervised by the payer</option>
+                              <option value="supervision-1">Monitored or supervised</option>
+                              <option value="supervision-2">Not monitored or supervised</option>
                            </select>
 
 				<label for="where">Control - Work location <small>(factor 2)</small></label>
                            <select id="where" name="where" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="where-1">Worker works at the payer's workplace</option>
-                              <option value="where-2">Worker works in mobile locations</option>
-                              <option value="where-3">Worker works from home or their own office</option>
+                              <option value="where-1">Payer's workplace</option>
+                              <option value="where-2">Mobile locations</option>
+                              <option value="where-3">Home or the worker's own office</option>
                            </select>
 
 			<label for="agenda">Control - Who determines work to be done  <small>(factor 2)</small></label>
                            <select id="agenda" name="agenda" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="agenda-1">Worker determines what work is to be done</option>
-                              <option value="agenda-2">Payer determines what work is to be done</option>
-                              <option value="agenda-3">Both worker and payer determines what work is to be done</option>
+                              <option value="agenda-1">Worker</option>
+                              <option value="agenda-2">Payer</option>
+                              <option value="agenda-3">Both worker and payer</option>
                            </select>
                          			                      
  		 <label for="uniform">Control - Wear a uniform <small>(factor 2)</small></label>
                            <select id="uniform" name="uniform" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="uniform-1">Payer imposes a dress code or requires a uniform</option>
-                              <option value="uniform-2">Payer does not impose a dress code or require a uniform</option>
+                              <option value="uniform-1">Dress code or uniform</option>
+                              <option value="uniform-2">No dress code or no uniform<</option>
                            </select>
 				
                            <label for="training">Control - Training <small>(factor 2)</small></label>
