--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -207,7 +207,7 @@
                            <select id="uniform" name="uniform" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="uniform-1">Dress code or uniform</option>
-                              <option value="uniform-2">No dress code or no uniform<</option>
+                              <option value="uniform-2">No dress code or no uniform</option>
                            </select>
 				
                            <label for="training">Control - Training <small>(factor 2)</small></label>
