--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1917,7 +1917,7 @@
  </li>
   </ol>
 <h2 id="h_3">Past court decisions</h2>
-<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button" data-wb-doaction='{"action": "ajax", "url": "/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container-court-order", "trigger" true }'>court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 
 
  <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
@@ -1975,7 +1975,8 @@
   
 <section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
-	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
+	<div id="container-court-order"></div>
+	<a href="/cra-arc/payroll/guidance/court-filter.html#court">Court decisions on employment status</a>	
 	</div></section>
 	 
 
