--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1973,12 +1973,13 @@
 </div>
    </div> 
   
-<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+<section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
 	<div id="container-court-order"></div>
 	<a href="/cra-arc/payroll/guidance/court-filter.html#court">Court decisions on employment status</a>	
 	</div></section>
-	 
+	
+
 
   <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">
     <header class="modal-header">
