--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1917,7 +1917,9 @@
  </li>
   </ol>
 <h2 id="h_3">Past court decisions</h2>
-<p>You can search for <a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger" true }'>court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+<p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
+
+<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger" true }'>Search court decisions <span class="far fa-question-circle"></span></a>
 
 
  <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
@@ -1976,7 +1978,7 @@
 <section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
 	<div id="container"></div>
-
+<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court"></div>
 	</div></section>
 
 
