--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -84,6 +84,7 @@
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="result-1">Employee</option>
+			      <option value="result-3">Incorporated employee</option>   
                               <option value="result-2">Self-employed worker</option>
                             
                            </select>
