--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -54,7 +54,12 @@
             });
          </script>
          <main role="main" property="mainContentOfPage" class="container">
-            <h1 property="name" id="wb-cont">[Name of X] ([ABC])</h1>
+            <h1 property="name" id="wb-cont">Podcasts</h1>
+		 
+          <p>Get the tax-related information you need by listening to Canada Revenue Agency (CRA) podcasts.</p>  <p>The podcasts are free digital audio files that you can:</p>  <ul> 
+ <li>listen to from this webpage; or</li> 
+ <li>download from this webpage or through a podcast app to listen to offline later.</li> 
+</ul> 
             <p>The [Name of X] ([ABC]) gives income support to employed and self-employed Canadians who...</p>
             <p>If you are eligible, you can receive $[#] (before taxes) for a [#]-week period.</p>
             <p>If your situation continues past [#] weeks, you will need to apply again.  You may re-apply up to a total of [#] eligibility periods between August 30, 2020 and August 28, 2021.</p>
