--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -79,8 +79,9 @@
                      <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
- 	 <h3 class="mrgn-tp-sm">Court decisions</h3>
-                           <label for="result">Result</label>
+ 	 <h3 class="mrgn-tp-sm">Court cases</h3>
+
+                             <label for="result">Result</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
                               <option value="result-1">Employee</option>
