--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -103,7 +103,7 @@
     
 
     
-         <p>The payroll podcast is aimed at the payroll community and employers in general. In each episode, the host will talk to subject matter experts.</p></div>
+         <p>The payroll podcast is aimed at the payroll community and employers in general. In each episode, the host will talk to subject matter experts.</p></div></div>
             <p>The [Name of X] ([ABC]) gives income support to employed and self-employed Canadians who...</p>
             <p>If you are eligible, you can receive $[#] (before taxes) for a [#]-week period.</p>
             <p>If your situation continues past [#] weeks, you will need to apply again.  You may re-apply up to a total of [#] eligibility periods between August 30, 2020 and August 28, 2021.</p>
