--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1919,7 +1919,7 @@
 <h2 id="h_3">Past court decisions</h2>
 <p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
 
-<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger" true }'>Search court decisions</a>
+<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger": true }'>Search court decisions</a>
 
 
  <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
@@ -1978,7 +1978,7 @@
 <section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
 	<div id="container"></div>
-<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court"></div>
+<div id="container"><p><a href="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court">Court rulings</a></p></div>
 	</div></section>
 
 
