--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1978,7 +1978,7 @@
 <section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
 	</header>	<div class="modal-body">	
 	<div id="container"></div>
-<div id="container"><p><a href="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court">Court rulings</a></p></div>
+<div id="container"> <p><span class="fa fa-spinner fa-spin"></span> <a href="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court">Court rulings</a></p></div>
 	</div></section>
 
 
