--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -62,9 +62,11 @@
          <main role="main" property="mainContentOfPage" class="container">
             <h1 property="name" id="wb-cont">Podcasts</h1>
 		 
-          <p>Get the tax-related information you need by listening to Canada Revenue Agency (CRA) podcasts.</p>  <p>The podcasts are free digital audio files that you can:</p>  <ul> 
- <li>listen to from this webpage; or</li> 
- <li>download from this webpage or through a podcast app to listen to offline later.</li> 
+          <p>Get the tax-related information you need by listening to Canada Revenue Agency (CRA) podcasts.</p>  <p>The podcasts are free digital audio files that you can:</p> 
+		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col"> 
+ <p>Listen to from this webpage</p> </li> 
+ <li class="cnjnctn-col"><p>Download from this webpage or through a podcast app to listen to offline later</p></li> 
 </ul> 
 		 <div class="mwsbodytext text parbase section">
     
