--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -176,19 +176,19 @@
                               <option value="turndown-2">Worker does not have the right to refuse work from the payer</option>
                            </select>
 	
- 		      <label for="schedule">Control - Who set's work hours and schedule</label>
+ 		      <label for="schedule">Control - Hours and schedule</label>
                            <select id="schedule" name="schedule" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="schedule-1">Worker </option>
-                              <option value="schedule-2">Payer </option>
+                              <option value="schedule-1">Worker sets their own hours and schedule </option>
+                              <option value="schedule-2">Payer sets hours and schedule for the worker</option>
                            </select>
 
 
-                           <label for="supervision">Control - Degree of autonomy</label>
+                           <label for="supervision">Control - Autonomy</label>
                            <select id="supervision" name="supervision" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
-                              <option value="supervision-1">Monitored or supervised</option>
-                              <option value="supervision-2">Not monitored or supervised</option>
+                              <option value="supervision-1">Worker is monitored or supervised</option>
+                              <option value="supervision-2">Worker is not monitored or supervised</option>
                            </select>
 
 				<label for="where">Control - Work location</label>
