--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -29,6 +29,9 @@
 <link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css"/>
 <link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon"/>
 <noscript><link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/noscript.min.css"/></noscript>
+
+	          <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
+<link href="https://cra-arc.gc.ca/wet-boew/css/custom/and-or.css" rel="stylesheet"> 
 	      
 	      <!-- Write closure template -->
          <script type="text/javascript">
