--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -72,9 +72,9 @@
 		 
           <p>Get the tax-related information you need by listening to Canada Revenue Agency (CRA) podcasts.</p>  <p>The podcasts are free digital audio files that you can:</p> 
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
-  <li class="cnjnctn-col"> 
+  <li class="cnjnctn-col-30"> 
  <p>Listen to from this webpage</p> </li> 
- <li class="cnjnctn-col"><p>Download from this webpage or through a podcast app to listen to offline later</p></li> 
+ <li class="cnjnctn-col-30"><p>Download from this webpage or through a podcast app to listen to offline later</p></li> 
 </ul> 
 		 <div class="mwsbodytext text parbase section">
     
