minor text updates

--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -69,11 +69,11 @@
             </ul>
             <div class="clearfix"></div>
             <div id="court">
-               <p>You can search for court decisions to help determine whether the worker is an employee, an incorporated employee or a self-employed worker for tax purposes. The CRA does not guarantee that the list to the of court cases are 100% complete.</p>
+               <p>You can review prior court decisions to help determine whether the worker is an employee, an incorporated employee or a self-employed worker for tax purposes. The CRA does not guarantee that the list to the of court cases are 100% complete.</p>
                <section id="filteredEventsList" class="wb-tagfilter provisional">
                   <div class="row">
                      <div class="col-md-4">
-                        <details class="provisional wb-details-close mrgn-bttm-lg px-2" open>
+                        <details class="provisional wb-details-close mrgn-bttm-lg" open>
                            <summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                            <div class="form-group">
                               <fieldset>
@@ -254,7 +254,7 @@
                            <input type="search" class="hidden" id="customSearchUI">
                         </div>
                         <div class="wb-tagfilter-items">
-                           <ul class="list-unstyled link-list lst-spcd-2">
+                           <ul class="list-unstyled link-list">
                               <li data-wb-tags= " court-2   industry-1   intent-2   workshould-2   turndown-2   schedule-2   supervision-1   where-1   agenda-2   uniform-1   training-1   ownership-2   delegate-2   risk-2   reimbursement-2   result-1 " class="well brdr-rds-0">
                                  <p class="h4 mrgn-tp-0">Title: <a href="https://decisions.fca-caf.gc.ca/fca-caf/decisions/en/item/489451/index.do">AE Hospitality Ltd. v. Canada (National Revenue) (Chefs - multiple)</a> </p>
                                  <ul class="list-unstyled mrgn-bttm-md">
