--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1917,9 +1917,9 @@
  </li>
   </ol>
 <h2 id="h_3">Past court decisions</h2>
-<p>You can search for court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
+<p>You can review prior court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
 
-<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger": true }'>Search court decisions</a>
+<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger": true }'>Review court decisions</a>
 
 
  <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
@@ -1975,10 +1975,10 @@
 </div>
    </div> 
   
-<section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+<section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Review past court decisions</h2>
 	</header>	<div class="modal-body">	
 	<div id="container"></div>
-<div id="container"> <p><span class="fa fa-spinner fa-spin"></span> <a href="https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court">Court rulings</a></p></div>
+<div id="container"><div>
 	</div></section>
 
 
