--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -1045,7 +1045,9 @@
 	 </ol>
 
 <h2 id="h_3">Past court decisions</h2>
-<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+<p>You can review prior court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
+
+<a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-filter.html#court", "container": "#container", "trigger": true }'>Review court decisions</a>
 
 	 <h2 id="h_2">If you are not sure if the worker is an employee or self-employed</h2>
 <div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#ajax-ruling"></div>
@@ -1055,9 +1057,10 @@
 
 <div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/guidance/factors-federal.html#ajax-leg-reference"></div>
 
-<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
+<section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Review past court decisions</h2>
 	</header>	<div class="modal-body">	
-	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
+	<div id="container"></div>
+<div id="container"><div>
 	</div></section>
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
