--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -132,7 +132,7 @@
 </li>
 </ul>
 <h4>Past court decisions</h4>
-<p>You can search for <a href="#ajax-court" aria-controls="ajax-court" class="overlay-lnk" role="button">court decisions <span class="far fa-question-circle"></span></a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
+<p>You can <a href="court-filter.html">review court decisions</a> to help determine whether the worker is an employee or self-employed for tax purposes.</p>
 </li>
 <li><h3>If the worker is an employee</h3>
 <h4><a href="factors-psb.html">Determine if the worker is an incorporated employee</a></h4>
@@ -147,11 +147,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#contract"></div>	
 	</div></section>
 
-<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
-	</header>	<div class="modal-body">	
-	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
-	</div></section>
-	 
+
 
     <div id="def-preFooter"></div>
             <!-- Write closure template -->
