--- a/payroll/guidance/court-cases.html
+++ b/payroll/guidance/court-cases.html
@@ -81,7 +81,7 @@
                         <fieldset>
  	 <h3 class="mrgn-tp-sm">Court cases</h3>
 
-<div class="checkbox mrgn-bttm-md"> <label for="psb"><input type="checkbox" class="form-control wb-tagfilter-ctrl" id="psb" value="psb-1">All cases related to personal services business</label> </div>
+<div class="checkbox gc-chckbxrdio"><legend class="wb-inv">Personal services business (PSB)</legend><input aria-controls="wb-auto-4" value="psb-1" id="psb" class="form-control wb-tagfilter-ctrl" type="checkbox"><label for="psb">Related to: Personal services business (PSB)</label> </div>
 
                              <label for="result">Result</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
