--- a/payroll/guidance/court-cases.html
+++ b/payroll/guidance/court-cases.html
@@ -75,13 +75,14 @@
 <p>You can review prior court decisions to help determine whether the worker is an employee, an incorporated employee or a self-employed worker for tax purposes. The CRA does not guarantee that the list to the of court cases are 100% complete.</p>		
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-4">
                      <details class="provisional wb-details-close mrgn-bttm-lg" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
- 	 <h3 class="mrgn-tp-sm">Court cases</h3>
 
 <div class="checkbox gc-chckbxrdio"><legend class="wb-inv">Personal services business (PSB)</legend><input aria-controls="wb-auto-4" value="psb-1" id="psb" class="form-control wb-tagfilter-ctrl" type="checkbox"><label for="psb">Related to: Personal services business (PSB)</label> </div>
+
+ 	 <h3 class="mrgn-tp-sm">General</h3>
 
                              <label for="result">Result</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
