--- a/payroll/guidance/court-cases.html
+++ b/payroll/guidance/court-cases.html
@@ -254,6 +254,7 @@
                            </select>
                          
                         </fieldset>
+<p><a href="?" class="btn btn-default mrgn-bttm-0 mrgn-tp-md">Reset</a></p>
                      </div>
 					 </details>
                   </div>
