--- a/payroll/guidance/court-cases.html
+++ b/payroll/guidance/court-cases.html
@@ -82,7 +82,7 @@
 
 <div class="checkbox gc-chckbxrdio"><legend class="wb-inv">Personal services business (PSB)</legend><input aria-controls="wb-auto-4" value="psb-1" id="psb" class="form-control wb-tagfilter-ctrl" type="checkbox"><label for="psb">Related to: Personal services business (PSB)</label> </div>
 <hr>
- 	 <h3 class="mrgn-tp-sm">General</h3>
+ 	     <legend class="mrgn-bttm-0">General</legend>
 
                              <label for="result">Result</label>
                            <select id="result" name="result" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
@@ -156,7 +156,7 @@
                               </option>
                            </select>
 <hr>
- <h3>Factors</h3>
+  <legend class="mrgn-bttm-0">Factors</legend>
                            <label for="intent">Contract - Intent of relationship</label>
                            <select id="intent" name="intent" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
                               <option value="">All</option>
