--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -92,7 +92,7 @@
 <aside>
 	   <h2 class="h3">Past court decisions</h2>
 	   <ul>
-	     <li><a href="court-filter.html">Court decisions on employment status</a></li>
+	     <li><a href="court-cases.html">Court decisions on employment status</a></li>
 	   </ul>
 	</aside>
 </div>
