--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -102,7 +102,6 @@
 <li><a href="#h_2">Types of employment status for tax purposes</a></li>
 <li><a href="#h_3">Determine if a contract is valid</a></li>
 <li><a href="#h_4">If you made an error in the employment status</a></li>
-<li><a href="#h_6">Past court decisions</a></li>
 <li><a href="#h_5">If you are not sure if the worker is an employee or self-employed </a></li>
 </ul>
 
@@ -242,6 +241,11 @@
 
 
 <h2 id="h_5">If you are not sure if the worker is an employee or self-employed </h2>
+ <h3>Review past court decisions</h3>
+<p>You can review court decisions to help determine whether the worker is an employee or self-employed for tax purposes.</p> 
+
+<p><a href="#ajax-court" class="wb-lbx btn btn-primary btn-lg d-flex max-content"  aria-controls="ajax-court" role="button" data-wb-doaction='{"action": "ajax", "url": "https://test.canada.ca/cra-arc/payroll/guidance/court-cases.html#court", "container": "#container", "trigger": true }'>Review court decisions</a></p>
+<h3>Request a ruling from CRA</h3>
 <p>You need to consider multiple factors to determine if the worker is an employee or is self-employed. You can use the CRA guidance to help you gather the facts based on your sitution. </p>
 
  <div class="row">
