--- a/maire/podcast.html
+++ b/maire/podcast.html
@@ -261,8 +261,10 @@
         <ul class="list-inline">
 <li>Date</li>
 <li>Length</li>
-<br><li><a aria-labelledby="pyrll-tbs-8" href="/en/revenue-agency/news/cra-multimedia-library/podcasts/transcript-episode-8.html"><span class="glyphicon glyphicon-file"></span>Transcript</a></li>
-<li><a aria-labelledby="pyrll-tbs-8" href="/content/dam/cra-arc/newsroom/pdcsts/pyrllpdcsts8-en.mp3">Download</a></li>
+<br><li><a aria-labelledby="pyrll-tbs-8" href="/en/revenue-agency/news/cra-multimedia-library/podcasts/transcript-episode-8.html"><span class="glyphicon glyphicon-file"></span>Transcript of Taxology episode 3</a></li>
+<li><a aria-labelledby="pyrll-tbs-8" href="/content/dam/cra-arc/newsroom/pdcsts/pyrllpdcsts8-en.mp3">Download Taxology episode 3</a></li>
+		<li><a aria-labelledby="pyrll-tbs-8" href="/content/dam/cra-arc/newsroom/pdcsts/pyrllpdcsts8-en.mp3">Listen to Taxology episode 3</a></li>
+
 </ul>
 
     
