--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -261,14 +261,16 @@
 	</div></div>
 
 
+<section id="ajax-court" class="mfp-hide modal-dialog modal-content overlay-def wb-popup-mid"><header class="modal-header"><h2 class="modal-title">Review court decisions</h2>
+	</header>	<div class="modal-body">	
+	<div id="container"></div>
+<div id="container"><div>
+	</div></section>
+
+
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-psb"></div>
-	</div></section>
-
-<section id="ajax-court" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Search for court decisions</h2>
-	</header>	<div class="modal-body">	
-	<div data-ajax-replace="/cra-arc/payroll/guidance/court-filter.html#court"></div>	
 	</div></section>
 
 
