revert stretched link

--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -101,7 +101,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-<h4> <a href="factors-federal.html" class="stretched-link">Contract formed in a province or territory not in Quebec</a></h4>
+<h4> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h4>
 
 <p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
@@ -121,7 +121,7 @@
 </ul>
 </li>
 <li class="cnjnctn-col-60">
-<h4><a href="factors-quebec.html"  class="stretched-link" >Contract formed in the province of Quebec</a></h4>
+<h4><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h4>
 <p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
