made entire link area clickable

--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -101,7 +101,9 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-<h4> <a href="factors-federal.html">Contract formed in a province or territory not in Quebec</a></h4>
+<div class="row">
+<div class="col-xs-12">
+<h4> <a href="factors-federal.html" class="stretched-link">Contract formed in a province or territory not in Quebec</a></h4>
 
 <p >Applies to employment performed in and outside Canada, where employment is in: </p><ul class="list-inline mrgn-bttm-md">
 
@@ -119,16 +121,21 @@
 <li class="mrgn-rght-md"><img src="../images/flag-yt.png" class="mrgn-rght-sm" alt=""> YT</li>
 
 </ul>
+</div>
+</div>
 </li>
 <li class="cnjnctn-col-60">
-<h4><a href="factors-quebec.html">Contract formed in the province of Quebec</a></h4>
+<div class="row">
+<div class="col-xs-12">
+<h4><a href="factors-quebec.html"  class="stretched-link">Contract formed in the province of Quebec</a></h4>
 <p>Applies to employment performed in and outside Canada, where employment is in:</p><ul class="list-inline mrgn-bttm-md">
 
 <li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
 
 
 </ul>
-
+</div>
+</div>
 </li>
 </ul>
 </li>
