--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -470,7 +470,7 @@
 						   </div>
 						   <div class="col-md-5">
 						   
-    <img src="images/cpp-table-pay-e.JPG" class="img-responsive" alt="Screenshot of CPP contribution table, highlighting the field: Pay">
+    <img src="images/cpp-step4-eng.png" class="img-responsive" alt="Screenshot of CPP contribution table, highlighting the field: Pay">
    
   
   </div>
@@ -487,7 +487,7 @@
 						   </div>
 						   <div class="col-md-5">
 						   
-    <img src="images/cpp-table-cpp-e.JPG" class="img-responsive" alt="Screenshot of CPP contribution table, highlighting the field: CPP">
+    <img src="images/cpp-step5-eng.png" class="img-responsive" alt="Screenshot of CPP contribution table, highlighting the field: CPP">
    
   
   </div>
